*gitlab-ce-8.17.2 (07 Mar 2017)

  07 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.17.2.ebuild:
  www-apps/gitlab-ce:   Added ebuild for gitlab-ce-8.17.2. This version does not
  include support for gitlab-pages yet, as the ebuild for that is only just
  about to be introduced to the overlay.

  26 Feb 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-8.17.0.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Updated ebuild for the GIT version (-9999) and fixed the
  dependency to nodejs in the 8.17.0 version.

  26 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/06-gitlab-ce-8.17-fix-webpack-config.patch, gitlab-ce-8.17.0.ebuild:
  www-apps/gitlab-ce:  added patch for the webpack config, hopefully fixing the
  emerge --config phase

*gitlab-ce-8.17.0 (24 Feb 2017)

  24 Feb 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.17.0.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.17.0. This is the first
  version to depend on npm

*gitlab-ce-8.16.6 (24 Feb 2017)

  24 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-ce-8.16.6.ebuild:
  www-apps/gitlab-ce: Added ebuild for gitlab-ce-8.16.6

*gitlab-ce-8.15.7 (16 Feb 2017)
*gitlab-ce-8.16.5 (16 Feb 2017)
*gitlab-ce-8.17.0_rc3 (16 Feb 2017)

  16 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/03-gitlab-ce-8.17.0-database.yml.patch, +gitlab-ce-8.15.7.ebuild,
  +gitlab-ce-8.16.5.ebuild, +gitlab-ce-8.17.0_rc3.ebuild,
  -gitlab-ce-8.17.0_rc1.ebuild, gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Added ebuilds for the lates patch versions of the 8.15
  and 8.16 branch, and also for the lates release candidate of the 8.17 branch.

*gitlab-ce-8.16.4 (14 Feb 2017)
*gitlab-ce-8.17.0_rc1 (14 Feb 2017)

  14 Feb 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.16.4.ebuild,
  +gitlab-ce-8.17.0_rc1.ebuild, -gitlab-ce-8.14.5.ebuild,
  -gitlab-ce-8.16.0_rc2.ebuild, gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce: added ebuild for gitlab-ce-8.16.4
