@@ -1,3 +1,10 @@
+*gitlab-ce-8.17.3 (13 Mar 2017)
+
+  13 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.17.3.ebuild,
+  gitlab-ce-9999.ebuild, metadata.xml:
+  www-apps/gitlab-ce:   added ebuild for gitlab-ce-8.17.3, which is the initial
+  ebuild to contain a USE flag for gitlab-pages
+
 *gitlab-ce-8.17.2 (07 Mar 2017)
 
   07 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.17.2.ebuild:
